[package]
name = "hmmm_rs"
version = "0.1.0"
authors = ["Ethan Vazquez <edv121@outlook.com>"]
edition = "2018"

[[bin]]
name = "hmmm"
path = "src/main.rs"

[lib]
name = "hmmm_rs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
clap = "*"
colored = "2"
csv = "*"
chrono = "*"

[dependencies.terminal]
version = "0.2.1"
features = ["crossterm-backend"]